added go test files
