# docs/swagger.json
@@ -12,7 +12,7 @@
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Gets a list of all external accounts registered via Plaid",
@@ -23,7 +23,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "External Accounts"
                 ],
                 "summary": "Get all registered external accounts",
                 "responses": {
@@ -55,7 +55,7 @@
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Gets account information based on access token",
@@ -66,7 +66,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "External Accounts"
                 ],
                 "summary": "Get Get Account Information",
                 "parameters": [
@@ -100,7 +100,7 @@
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Retrieves live account balances for all accounts attached to an external account registratiom",
@@ -111,7 +111,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "External Accounts"
                 ],
                 "summary": "Get Current A/c Balances",
                 "responses": {
@@ -137,7 +137,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Creates a permanent access token based on public token",
@@ -148,7 +148,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "External Accounts"
                 ],
                 "summary": "Register Access Token",
                 "parameters": [
@@ -179,7 +179,7 @@
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Gets all transactions for the  past 30 days",
@@ -190,7 +190,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "External Accounts"
                 ],
                 "summary": "Get Transactions",
                 "parameters": [
@@ -227,7 +227,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Creates a budget with requesting user as owner",
@@ -238,7 +238,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "budget"
+                    "Budgets"
                 ],
                 "summary": "Create a budget",
                 "parameters": [
@@ -284,7 +284,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Gets a list of all budgets current user is a part of",
@@ -295,7 +295,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "budget"
+                    "Budgets"
                 ],
                 "summary": "Get Budgets",
                 "responses": {
@@ -321,7 +321,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Add expense to an existing budget",
@@ -332,7 +332,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "expense"
+                    "Budget Expenses"
                 ],
                 "summary": "Adds an expense to the given budget",
                 "parameters": [
@@ -378,7 +378,7 @@
             "delete": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Deletes Expense from DB based on id",
@@ -389,7 +389,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "expense"
+                    "Budget Expenses"
                 ],
                 "summary": "Deletes Expense",
                 "parameters": [
@@ -437,7 +437,7 @@
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Gets a list of all expenses tied to a given budget",
@@ -448,7 +448,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "expense"
+                    "Budget Expenses"
                 ],
                 "summary": "Gets expenses for budget",
                 "parameters": [
@@ -495,7 +495,7 @@
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Gets all the expense charge cycles available to create an expense for a budget",
@@ -506,7 +506,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "expense"
+                    "Budget Expenses"
                 ],
                 "summary": "Gets a list of expense charge cycles",
                 "responses": {
@@ -532,7 +532,7 @@
             "put": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Add expense to an existing budget",
@@ -543,7 +543,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "expense"
+                    "Budget Expenses"
                 ],
                 "summary": "Adds an expense to the database",
                 "parameters": [
@@ -595,7 +595,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Registers a user profile in the finlit database",
@@ -606,7 +606,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "role"
+                    "User Roles"
                 ],
                 "summary": "Registers user to the database",
                 "responses": {
@@ -632,7 +632,7 @@
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Gets the user's profile from the finlit database",
@@ -643,7 +643,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "Users"
                 ],
                 "summary": "Gets user from the database",
                 "operationId": "user-get",
@@ -673,7 +673,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "Google AccessToken": []
                     }
                 ],
                 "description": "Registers a user profile in the finlit database",
@@ -684,7 +684,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "Users"
                 ],
                 "summary": "Registers user to the database",
                 "responses": {
@@ -1008,11 +1008,6 @@
         }
     },
     "securityDefinitions": {
-        "ApiKeyAuth": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
-        },
         "Google AccessToken": {
             "type": "apiKey",
             "name": "Authorization",
